fix: always show a scrollbar to not push the content left when it appear

--- a/src/templates/PageBody/PageBody.module.scss
+++ b/src/templates/PageBody/PageBody.module.scss
@@ -3,12 +3,13 @@ html {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  overflow-y: overlay;
 }
 
 body {
   font-family: "Montserrat", sans-serif;
+  width: 100vw;
   letter-spacing: 0.04rem;
   color: var(--body-primary);
   background-color: var(--body-background-primary);
+  overflow-y: scroll;
 }
